--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -26,13 +26,15 @@
     <div class="login-box-body">
       <p class="login-box-msg">Acesso a Área Restrita</p>
 
+      <%- include('../inc/content/alerts') -%>
+
       <form method="post">
         <div class="form-group has-feedback">
-          <input type="email" class="form-control" placeholder="E-mail">
+          <input type="email" name="email" class="form-control" placeholder="E-mail" value="<%= body.email %>">
           <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
         </div>
         <div class="form-group has-feedback">
-          <input type="password" class="form-control" placeholder="Senha">
+          <input type="password" name="password" class="form-control" placeholder="Senha">
           <span class="glyphicon glyphicon-lock form-control-feedback"></span>
         </div>
         <div class="row">
