Administração do Menu - Excluindo dados

--- a/views/admin/menus.ejs
+++ b/views/admin/menus.ejs
@@ -165,6 +165,31 @@ formUpdate.save().then(json => {
   console.log(err);
 });
 
+[...document.querySelectorAll('.btn-delete')].forEach(btn => {
+  btn.addEventListener('click', e => {
+
+    let tr = e.path.find(el => {
+      return (el.tagName.toUpperCase() === 'TR');
+    });
+
+    let data = JSON.parse(tr.dataset.row);
+
+    if(confirm(`Deseja excluir o menu ${data.title}?`)) {
+      
+      fetch(`/admin/menus/${data.id}`, {
+        method: 'DELETE'
+      }).then(response => response.json())  
+        .then(json => {
+          window.location.reload();
+      });
+
+    }
+
+
+    
+  });
+});
+
 [...document.querySelectorAll('.btn-update')].forEach(btn => {
   btn.addEventListener('click', e => {
 
