--- a/views/admin/reservations.ejs
+++ b/views/admin/reservations.ejs
@@ -198,3 +198,24 @@
     </div>
 
 <%- include('inc/footer') -%>
+
+<script src="/js/hcode-formsave.js"></script>
+<script>
+
+let formCreate = document.querySelector('#modal-create form');
+
+formCreate.save().then(json => {
+  window.location.reload();
+}).catch(err => {
+  console.log(err);
+});
+
+let formUpdate = document.querySelector('#modal-update form');
+
+formUpdate.save().then(json => {
+  window.location.reload();
+}).catch(err => {
+  console.log(err);
+});
+
+</script>
