Obtendo dados do servidor e atualizando gráfico

--- a/views/admin/reservations.ejs
+++ b/views/admin/reservations.ejs
@@ -231,17 +231,8 @@
     type: 'line',
     data: {
 
-      labels: ['Jan', 'Fev', 'Mar', 'Abr', 'Mai', 'Jun'],
-      datasets: [{
-
-        data: [3, 5, 6, 2, 5, 2],
-        label: 'Reservas',
-        backgroundColor: 'rgb(54, 162, 235)',
-        borderColor: 'rgb(54, 162, 235)',
-        fill: true,
-        pointBackgroundColor: '#fff'
-
-      }]
+      labels: [],
+      datasets: []
 
     },
     options: {
@@ -274,6 +265,26 @@
       }
     }
   });
+
+  fetch(`/admin/reservations/chart${window.location.search}`)
+    .then(response => response.json())
+    .then(json => {
+
+      chart.data = {
+        labels: json.months,
+        datasets: [{
+          data: json.values,
+          label: 'Reservas',
+          backgroundColor: 'rgb(54, 162, 235)',
+          borderColor: 'rgb(54, 162, 235)',
+          fill: true,
+          pointBackgroundColor: '#fff'
+        }]
+      };
+
+      chart.update();
+
+    });
 
 
 </script>
